--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,61 @@
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('../fonts/Proxima Nova Regular.otf') format('opentype'),
+     	 url('../fonts/proxima nova regular.woff2') format('woff2'),
+         url('../fonts/proxima nova regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'Futura PT Heavy';
+	src: url("../fonts/futurapt-heavy.eot");
+	src: url("../fonts/futurapt-heavy.ttf"),
+		url("../fonts/futurapt-heavy.woff");
+	font-weight: 400;
+	font-style: normal;
+}
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic');
 *{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+html{
+	font-size: 10px;
+}
 body{
 	background-color: #464f54;
+	margin: 0;
+	padding: 0;
+	color: #000;
+	font-family: Georgia, serif;
+	font-size: 2.7rem;
+	line-height: 1.5;
+}
+.Article{
+	background-color: #fff;
+	width: 90%;
+	margin: 140px auto 20px;
+	padding: 200px 130px 130px;
+}
+.Author{
+	text-transform: uppercase;
+	font-family: Proxima Nova;
+	font-size: 2rem;
+	color: #b4b4b4;
+}
+.Author span:not(:empty):after{
+	content: ",";
+}
+.Title{
+	font-size: 7.8rem;
+	line-height: 1;
+	font-family: Futura PT Heavy;
+	text-transform: uppercase;
+	margin: 40px 0 20px;
+}
+.subtitle{
+	font-size: 3rem;
+	color: #8f8f8f;
+	font-style: italic;
 }
