--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @font-face {
+	font-family: Playfair;
+	src:url("https://fonts.googleapis.com/css?family=Playfair+Display" );
+}
+@font-face {
     font-family: 'Proxima Nova';
     src: url('../fonts/Proxima Nova Regular.otf') format('opentype'),
      	 url('../fonts/proxima nova regular.woff2') format('woff2'),
@@ -37,6 +41,7 @@ body{
 	width: 90%;
 	margin: 140px auto 20px;
 	padding: 200px 130px 130px;
+	box-shadow: 0 0 90px 5px #0005;
 }
 .Author{
 	text-transform: uppercase;
@@ -59,3 +64,69 @@ body{
 	color: #8f8f8f;
 	font-style: italic;
 }
+.Tools{
+	width: 75%;
+	position: absolute;
+	right: 0;
+	top: 4rem; 
+}
+.area{
+	background-color: #181818;
+	padding: 20px 0px 50px 60px;
+	box-shadow: 0 0 20px 5px #0005;
+}
+.area input[type="text"]{
+	background-color: transparent;
+	border: none;
+	color: #fff;
+	font-size: 4.8rem;
+	font-family: Playfair;
+	border-bottom: 1px solid rgba(255, 255, 255, .3);
+	display: block;
+	width: 100%;
+	padding: 0px 25px 25px 0;
+	transition: all .4s ease-in;
+}
+.area input[type="text"]:focus{
+	outline-style: none;
+	border-bottom-color: #f1b82b;
+}
+.area label{
+	text-transform: uppercase;
+	color: #767676;
+	font-family: Proxima Nova;
+	font-size: 1.5rem;
+	letter-spacing: 4px;
+}
+
+.toolbar{
+	background-color: #f1b82b;
+	margin-left: 50px;
+	box-shadow: 0 0 20px 5px #0005;
+}
+.toolbar ul{
+	margin: 0;
+	padding: 10px 40px;
+}
+.toolbar ul li{
+	list-style-type: none;
+	display: inline-block;
+}
+.toolbar ul li a{
+	color: #fff;
+	padding: 0;
+	text-decoration: none;
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	line-height: 40px;
+}
+.toolbar ul li a:hover,
+.toolbar ul li a:focus{
+	transition: all .2s ease-in;
+	box-shadow: 0 0 10px #000;
+	transform: scale(1.2);
+}
+
+
